flux/apps/base/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    app.kubernetes.io/name: registry
  ports:
  - name: registry
    port: 80
    targetPort: 80
